[package]
name = "byte-pool"
version = "0.0.1"
authors = ["dignifiedquire <me@dignifiedquire.com>"]
description = "Pool of byte slices, for efficient memory usage"
edition = "2018"
readme = "README.md"
license = "Apache-2.0/MIT"

[badges]
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "dignifiedquire/byte-pool" }
is-it-maintained-open-issues = { repository = "dignifiedquire/byte-pool" }

[dependencies]
